<?xml version="1.0"?>
<package>
  <name>argos3d_p100</name>
  <version>0.0.1</version>
  <description>The argos3D P100 ROS package</description>

  <maintainer email="office@voxel.at">Voxel interactive</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/voxel-dot-at/argos3d_p100_ros_pkg</url>

  <author email="amerino@voxel.at">Angel Merino</author>
  <author email="simon@voxel.at">Simon Vogl</author>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <build_depend>camera_calibration_parsers</build_depend>

</package>
